force-app/main/default/objects/ssot__EngagementChannelType__dlm/fields/ssot__CanCaptureConsent__c.field-meta.xml
<CustomField>
    <fullName>ssot__CanCaptureConsent__c</fullName>
    <label>Can Capture Consent</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CanCaptureConsent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>