force-app/main/default/objects/ssot__EngagementChannelType__dlm/fields/ssot__IsDirectActivationChannel__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsDirectActivationChannel__c</fullName>
    <label>Is Direct Activation Channel</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsDirectActivationChannel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>